--- a/src/output.css
+++ b/src/output.css
@@ -708,6 +708,10 @@ video {
   margin-bottom: 20px;
 }
 
+.mb-\[50px\] {
+  margin-bottom: 50px;
+}
+
 .mb-\[8px\] {
   margin-bottom: 8px;
 }
@@ -837,6 +841,10 @@ video {
 
 .h-\[320px\] {
   height: 320px;
+}
+
+.h-\[500px\] {
+  height: 500px;
 }
 
 .h-\[600px\] {
@@ -1203,6 +1211,10 @@ video {
   border-width: 2px;
 }
 
+.border-\[2px\] {
+  border-width: 2px;
+}
+
 .border-b {
   border-bottom-width: 1px;
 }
@@ -1423,6 +1435,10 @@ video {
   line-height: 1.75rem;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .font-normal {
   font-weight: 400;
 }
@@ -1619,6 +1635,10 @@ video {
     margin-left: 5rem;
   }
 
+  .lg\:mr-20 {
+    margin-right: 5rem;
+  }
+
   .lg\:mt-\[100px\] {
     margin-top: 100px;
   }
@@ -1697,8 +1717,16 @@ video {
     align-self: flex-start;
   }
 
+  .lg\:rounded-\[15px\] {
+    border-radius: 15px;
+  }
+
   .lg\:rounded-xl {
     border-radius: 0.75rem;
+  }
+
+  .lg\:border-\[3px\] {
+    border-width: 3px;
   }
 
   .lg\:px-8 {
@@ -1709,6 +1737,11 @@ video {
   .lg\:py-1 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
+  }
+
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .lg\:py-24 {
@@ -1846,6 +1879,10 @@ video {
 
   .xl\:rounded-xl {
     border-radius: 0.75rem;
+  }
+
+  .xl\:border-\[4px\] {
+    border-width: 4px;
   }
 
   .xl\:px-11 {
